# OpenReranker

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run_tests.py  setup_dev.sh  tox.ini
.github/workflows/: ci.yml
open_reranker/: __init__.py  main.py
open_reranker/api/: __init__.py  models.py  router.py
open_reranker/core/: __init__.py  auth.py  cache.py  config.py  logging.py  monitoring.py  rate_limiting.py
open_reranker/integrations/: __init__.py
open_reranker/integrations/dspy/: __init__.py  reranker.py
open_reranker/integrations/langchain/: __init__.py  reranker.py
open_reranker/models/: __init__.py  base.py  code_reranker.py  cross_encoder.py  table_reranker.py  text_reranker.py
open_reranker/services/: __init__.py  mlx_accelerator.py  reranker_service.py
open_reranker/utils/: __init__.py  code_utils.py  table_utils.py  text_utils.py
tests/: __init__.py  conftest.py  test_api.py  test_integrations.py  test_services.py
tests/core/: test_auth.py  test_cache.py  test_rate_limiting.py
